Match Wudang dungeon routes for 30 through 75
Compare each dungeon against the decompiled Wudang sources and fix the
divergences found:

- 30: part0 waypoints back to y=25; part3 searches 董军阵旗 before the boss
- 40: wire up the (x+100,25) unstuck and the y out-of-range correction
- 50: flip the unstuck direction, land it on y=27, pick one part0 point by (x,y)
- 60: fight 田丰/文丑/颜良 per room, sweep each room, stop searching in the corridor
- 65: search in part2, sweep 252-349 with y=37 on the walkway, use the red-name
  boss in 440-537, add the real fallback enemy config
- 70: restore every escort waypoint, correct y drift, drop the level fallback so
  only the two named targets are attacked
- 75: restore the (170,25) waypoint, move the boundaries to 120/160, attack by
  level in part0

Elite 75 now carries its own enemyLevels, and the gear merchant table no longer
falls through to the elite coordinate for regular 65.

Replace the RouteDecision constructor with factory methods and make the enemy
search strictly layered, which is what let 70 attack arbitrary trash.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>